--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/app.css">
     <title>Homepage</title>
 </head>
 <body>
     <h1> Welcome to  my page</h1>
-    <h2>The French term "Viennoiserie" encompasses a delectable array of pastries, including the iconic croissant,
+    <h2> The French term "Viennoiserie" encompasses a delectable array of pastries, including the iconic croissant,
      and pays homage to their roots in Vienna, Austria. Viennese bakers were renowned for their expertise in creating
      exquisite pastries, which eventually made their way to France. The croissant, with its delicate layers and buttery 
      flavour, quickly became a staple of French bakeries and breakfast tables. Despite its Austrian origins, this pastry
